test-crates/duchess-java-tests/tests/ui/type_mismatch.stderr
error: generic type parameter `Id { data: "bool" }` not among in-scope parameters: []
 --> $DIR/type_mismatch.rs:6:5
  |
6 |     public class java.lang.Object {
  |     ^^^^^^

error: aborting due to 1 previous error

